--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300i,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,700&display=swap');
 
 *,
 *::before,
