--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -41,13 +41,37 @@
 }
 
 .form {
+    &__inputWrapper {
+        margin-top: 30px;
+    }
+
+    &__label {
+        display: block;
+        color: #7d7d7d;
+        font-size: 1.4rem;
+    }
+
     &__input {
+        width: 80%;
+        max-width: 500px;
+        margin-top: 8px;
         border-style: none;
-        border-bottom: 2px solid #7d7d7d;
+        border-bottom: 3px solid #7d7d7d;
+
+        &:focus {
+            border-color: #1e58ff;
+        }
     }
 
     &__textarea {
+        width: 80%;
+        max-width: 500px;
+        margin-bottom: 50px;
         border-style: none;
-        border-bottom: 2px solid #7d7d7d;
+        border-bottom: 3px solid #7d7d7d;
+
+        &:focus {
+            border-color: #1e58ff;
+        }
     }
 }
