--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -3,6 +3,7 @@
     top: 16px;
     bottom: 16px;
     left: 50%;
+    max-width: 550px;
     width: 60vw;
     padding: 50px 80px 50px;
     transform: translateX(-50%);
